<resources>
    <string name="app_name">BulletinBoard</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_inter_id">ca-app-pub-3940256099942544/1033173712</string>

    <!-- Menu drawer strings  -->
    <string name="ad_cat_1">Обьявления</string>
    <string name="ad_my_ads">Мои обьявления</string>
    <string name="ad_my_favs">Избраное</string>
    <string name="def">Разное</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_appliances">Бытовая техника</string>
    <string name="ad_cat_2">Аккаунт</string>
    <string name="remove_ads">Удалить рекламу</string>
    <string name="ac_sing_up">Регистрация</string>
    <string name="ac_sing_in">Вход</string>
    <string name="ac_sing_out">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="avatar">Avatar</string>
    <string name="header_email">serglife777@gmail.com</string>
    <string name="not_reg">Войдите или зарегистрируйтесь!</string>
    <string name="new_ad">New ad</string>

    <!-- Sing dialog -->
    <string name="email_hint">Email</string>
    <string name="email_reset_password">Reset email was send!</string>
    <string name="email_reset_password_error">Email не найден, введите верный email</string>
    <string name="guest">Гость</string>
    <string name="password_hint">Password</string>
    <string name="sing_up_action">Зарегистрироватся</string>
    <string name="sing_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sing_up_error">Зарегестрироваться не удалось</string>
    <string name="sing_in_error">Войти не удалось</string>
    <string name="send_verification_error">Не удалось отправить email для подствержения.</string>
    <string name="send_verification_done">На вашу почту была отправленна ссылка для подвержения аккаунта.</string>

    <!-- Toast message -->
    <string name="link_done">Email подключен к Google аккаунту.</string>
    <string name="enter_to_google">У вас уже есть Google акаунт с такой почтой, войдите в аккаунт что бы подсоединить почту.</string>
    <string name="choose_country_first">Выберите страну.</string>

    <!-- Edit activity -->
    <string name="selected_country">*Выберите страну</string>
    <string name="selected_city">*Выберете город</string>
    <string name="selected_images">Selected images</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="index">Индекс</string>
    <string name="index_hint">*Индекс</string>
    <string name="tel">Телефон</string>
    <string name="tel_number">*Номер телефона</string>
    <string name="with_send">С отправкой?</string>
    <string name="send">Отправка</string>
    <string name="category">Категория</string>
    <string name="select_category">*Выберите категорию</string>
    <string name="title">Заголовок</string>
    <string name="title_hint">*Название обьявления</string>
    <string name="price">Цена</string>
    <string name="price_hint">*Выберите цену</string>
    <string name="description">Описание</string>
    <string name="description_hint">*Введите описание</string>
    <string name="publish">Опубликовать</string>
    <string name="publishTime">Время публикации: </string>

    <!-- Description Activity -->
    <string name="price_desc">Цена:</string>
    <string name="tel_desc">Телефон:</string>
    <string name="email_desc">Email:</string>
    <string name="country_desc">Страна:</string>
    <string name="city_desc">Город:</string>
    <string name="index_desc">Индекс:</string>
    <string name="with_send_desc">С отправкой:</string>
    <string name="with_send_yes">Да</string>
    <string name="with_send_no">Нет</string>

    <!-- Filter Activity -->
    <string name="done_filter">Применить фильтер</string>
    <string name="clear_filter">Очистить фильтер</string>

    <!-- BillingManager -->
    <string name="thanks_for_buy">Спасибо за покупку!</string>
    <string name="buy_error">Не удалось реализовать покупку!</string>


</resources>