<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvSingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ac_sing_up"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edSingEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogMessage" />

    <EditText
        android:id="@+id/edSingPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edSingEmail"
        app:layout_constraintStart_toStartOf="@+id/edSingEmail"
        app:layout_constraintTop_toBottomOf="@+id/edSingEmail" />

    <Button
        android:id="@+id/btSingUpIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sing_up_action"
        app:layout_constraintEnd_toEndOf="@+id/edSingEmail"
        app:layout_constraintStart_toStartOf="@+id/edSingEmail"
        app:layout_constraintTop_toBottomOf="@+id/btGoogleSingIn" />

    <Button
        android:id="@+id/btForgetP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forget_password"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/edSingEmail"
        app:layout_constraintStart_toStartOf="@+id/edSingEmail"
        app:layout_constraintTop_toBottomOf="@+id/btSingUpIn" />

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/email_reset_password_error"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/edSingEmail"
        app:layout_constraintStart_toStartOf="@+id/edSingEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvSingTitle" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btGoogleSingIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:buttonSize="standard"
        app:layout_constraintEnd_toEndOf="@+id/edSingEmail"
        app:layout_constraintStart_toStartOf="@+id/edSingEmail"
        app:layout_constraintTop_toBottomOf="@+id/edSingPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>