<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/place_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_dark"
        tools:context=".ui.filter.FilterActivity">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollViewMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/grey"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardAdress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvTitleCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/country"
                            android:textColor="@color/green_main"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/selected_country"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/divider1"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/green_main"
                            android:orientation="horizontal" />

                        <TextView
                            android:id="@+id/tvTitleCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/city"
                            android:textColor="@color/green_main"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/selected_city"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/divider2"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/green_main"
                            android:orientation="horizontal" />


                        <TextView
                            android:id="@+id/tvTitleIndex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/index"
                            android:textColor="@color/green_main"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edIndex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ems="10"
                            android:hint="@string/index_hint"
                            android:inputType="number|textPersonName"
                            android:padding="10dp"
                            android:textColorHint="@color/grey_dark" />

                        <LinearLayout
                            android:id="@+id/divider4"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/green_main"
                            android:orientation="horizontal" />

                        <TextView
                            android:id="@+id/tvTitleSend"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:backgroundTint="@color/white"
                            android:text="@string/send"
                            android:textColor="@color/green_main"
                            android:textStyle="bold" />

                        <CheckBox
                            android:id="@+id/checkBoxWithSend"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/with_send" />

                        <LinearLayout
                            android:id="@+id/divider5"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/green_main"
                            android:orientation="horizontal" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btDone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:text="@string/done_filter"
                    android:textColor="@color/green_main" />
                <Button
                    android:id="@+id/btClear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/clear_filter"
                    android:textColor="@color/green_main" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>